--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coach Koza</title>
+    <meta property="og:title" content="VNTA Academy – Học Viện Thể Thao Tennis Và Pickleball">
+    <meta property="og:description" content="Học Viện Thể Thao Tennis Và Pickleball Lớn Nhất Việt Nam">
+    <meta property="og:image" content="https://res.cloudinary.com/dr1uftsqc/image/upload/v1741879313/dang_minh/backgroud_upfry2.jpg">
+    <meta property="og:url" content="https://web-pickleball.vercel.app/">
+    <meta property="og:type" content="website">
+
+    <title>Koza Pickleball</title>
   </head>
   <body>
     <div id="root"></div>
